Update README with Iteration 4 details